Fixed main padding bottom on small screens

--- a/src/style.css
+++ b/src/style.css
@@ -798,7 +798,7 @@ background-color: var(--hover-light);
     }
     .main{
       grid-area: 2 / 1 / -1 / -1;
-      padding: 25px 20px 0px 20px;
+      padding: 25px 20px 25px 20px;
   }
   #headerSection{
     grid-area: 1 / 1 / 1 / -1;
